# rbcforex

./: Cargo.toml  README.md
src/: BankCall.rs  BankResponse.rs  bank_call.rs  bank_response.rs  lib.rs  main.rs  rbc.rs  td.rs
