[package]
name = "rust-forexcan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features = ["json", "blocking"] }
serde_json = { version = "1.0.83" }
serde = {version = "1", features = ["derive"]}
url = "2.2.2"
clap = { version = "3.0", features = ["derive"]}
regex = "1"